<?xml version="1.0"?>
<package format="2">
  <name>relative_ctrl</name>
  <version>0.0.0</version>
  <description>use relative obs to control</description>

  <maintainer email="22232058@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>mavros_msgs</depend>


</package>